Change to spring boot, incomplete